# anchor-stubborn

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  petclinic-e2e.yml  pr-symbol-diff.yml
docker/: Dockerfile  README.md  run-dukesbank-e2e.sh  run-e2e.sh  run-petclinic-e2e.sh
docs/: ANCHOR-DSL-GUIDE.md  ANCHOR-DSL-LLM.txt  ANCHOR-DSL.md  BETA.md  INTEGRATION.md  MCP.md  POSITIONING.md  README.md  SCIP-INGEST.md
examples/: README.md
examples/demo-spring/: README.md  pom.xml
examples/demo-spring/cases/: README.md  controller-context.md  order-service-context.md  pay-flow-context.md
examples/demo-spring/metadata/: expected-context-types.txt
examples/demo-spring/scripts/: mcp-smoke.ps1  run-e2e.ps1
examples/dukesbank/: README.md
examples/dukesbank/cases/: README.md  account-controller-context.md
examples/dukesbank/scripts/: run-e2e.ps1
examples/fixtures/: minimal.scip
examples/migration-bridge/: README.md
examples/spring-petclinic/: README.md
examples/spring-petclinic/cases/: README.md  vet-controller-context.md
examples/spring-petclinic/scripts/: run-e2e.ps1
proto/: README.md
scripts/: regenerate_scip_proto.ps1  resolve_symbol.py  verify_controller_context.py  verify_demo_context.py  verify_dukesbank_context.py  verify_pay_flow_context.py  verify_petclinic_context.py
src/anchor_stubborn/: __init__.py  api.py  cli.py  config.py  metrics.py  tokens.py
src/anchor_stubborn/graph/: __init__.py  prune.py
src/anchor_stubborn/ingest/: __init__.py  extract.py  models.py  (+3 more)
tests/: scip_fixtures.py  test_anchor_dsl.py  test_context.py  test_demo_spring_controller_neighbors.py  test_demo_spring_neighbors.py  test_demo_spring_pay_flow_neighbors.py  test_dukesbank_neighbors.py  test_extract_edges.py  test_mcp_api.py  test_metrics.py  test_petclinic_neighbors.py  test_prune_neighbors.py  test_reconcile.py  test_scip_binary.py  test_store.py  test_weave_options.py  test_weave_target_methods.py
(+22 files in other folders)
