[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anchor-stubborn"
version = "0.9.0a1"
description = "Deterministic code context from symbol graphs — not vector search"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anchor Stubborn contributors" }]
keywords = [
    "scip",
    "code-context",
    "llm",
    "stub",
    "dependency-graph",
    "rag",
    "migration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
]
dependencies = [
    "protobuf>=5.0,<6.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.6,<2"]
dev = ["pytest>=8.0,<9.0", "mcp>=1.6,<2"]

[project.scripts]
anchor-stubborn = "anchor_stubborn.cli:app"
astub = "anchor_stubborn.cli:app"
anchor-stubborn-mcp = "anchor_stubborn.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anchor_stubborn"]

[tool.hatch.build.targets.wheel.force-include]
"src/anchor_stubborn/store/schema" = "anchor_stubborn/store/schema"

[tool.hatch.build.targets.sdist]
include = ["src/anchor_stubborn", "README.md", "LICENSE"]

[project.urls]
Homepage = "https://github.com/anchor-migration/anchor-stubborn"
Repository = "https://github.com/anchor-migration/anchor-stubborn"
Issues = "https://github.com/anchor-migration/anchor-stubborn/issues"
Documentation = "https://github.com/anchor-migration/anchor-stubborn#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
